fix(comp:overlay): quick switch visible causes positioning error

--- a/packages/components/anchor/style/index.less
+++ b/packages/components/anchor/style/index.less
@@ -66,6 +66,7 @@
       position: relative;
       display: block;
       text-decoration: none;
+      color: var(--ix-text-color);
       transition: color var(--ix-transition-duration-fast);
 
       &:hover,
